--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-
-/* body {
-  @apply  font-family: "Times New Roman", Times, serif;
-} */
-
-
-/* :root {
-  font-family:  Helvetica, Arial, sans-serif;
-  background-color: #f0f2f5;
-
-
-} */
 
 @keyframes bounceToTopRight {
   0% {
@@ -37,8 +24,12 @@
 }
 
 @keyframes fadeOut {
-  0% { opacity: 1; }
-  100% { opacity: 0; }
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
 }
 
 .fadeOut {
@@ -59,6 +50,3 @@
 .fade-in {
   animation: fadeIn 0.5s ease-in-out forwards;
 }
-
-
-
